-------------------------------------------------------------
Release 0 | Beta 0 | Development 0 | Experimental 5

Well, the Collada model support is still not quite finished
due to an animation problem, but hopefully it won't take too
long to find the problem and get everything working.

* Added ModelJoint
* Added ModelSkeleton
* Added ModelSkin
* Added ModelVertex
* Added ModelVertexGroup
* Added ColladaConverter

* Removed ANGeometry
* Removed ANModel

* Fixed bug: Error when no audio device was found

-------------------------------------------------------------
Release 0 | Beta 0 | Development 0 | Experimental 4

Finished reading the Collada file, now onto the difficult
part of actually using the animation data

* Added ColladaAnimation
* Added ColladaBindMaterial
* Added ColladaBindShapeMatrix
* Added ColladaChannel
* Added ColladaController
* Added ColladaInstanceController
* Added ColladaJoints
* Added ColladaLibraryAnimations
* Added ColladaLibraryControllers
* Added ColladaLibraryVisualScenes
* Added ColladaMatrix
* Added ColladaNameArray
* Added ColladaParam
* Added ColladaRotate
* Added ColladaSampler
* Added ColladaScale
* Added ColladaSkeleton
* Added ColladaSkin
* Added ColladaTranslate
* Added ColladaV
* Added ColladaVCount
* Added ColladaVertexWeights
* Added ColladaVisualScene

-------------------------------------------------------------
Release 0 | Beta 0 | Development 0 | Experimental 3

Some smaller changes, most notably basic texture support for
Collada models

* Added SoundSystem
* Added ShaderLoader
* Added ColladaAmbient
* Added ColladaBump
* Added ColladaColour
* Added ColladaDiffuse
* Added ColladaEffect
* Added ColladaEmission
* Added ColladaExtra
* Added ColladaFloat
* Added ColladaImage
* Added ColladaIndexOfRefraction
* Added ColladaInitFrom
* Added ColladaInstanceEffect
* Added ColladaLibraryEffects
* Added ColladaLibraryImages
* Added ColladaLibraryMaterials
* Added ColladaMaterial
* Added ColladaNewParam
* Added ColladaPhong