@@ -18,6 +18,8 @@
 
 package org.andor.core.resource;
 
+import org.andor.core.Colour;
+import org.andor.core.Font;
 import org.andor.core.render.RenderData;
 import org.andor.core.resource.audio.AudioData;
 import org.andor.core.resource.audio.AudioLoader;
@@ -29,6 +31,7 @@ import org.andor.core.resource.texture.Texture;
 import org.andor.core.resource.texture.TextureLoader;
 import org.andor.core.resource.texture.TextureManager;
 import org.andor.core.resource.texture.TextureParameters;
+import org.andor.utils.FontUtils;
 
 public class ResourceManager {
 	
@@ -39,6 +42,7 @@ public class ResourceManager {
 	private String shadersPath;
 	private String texturesPath;
 	private String audioPath;
+	private String fontsPath;
 	
 	/* The boolean that states whether this resource manager loads externally */
 	private boolean external;
@@ -50,6 +54,7 @@ public class ResourceManager {
 		this.shadersPath = "";
 		this.texturesPath = "";
 		this.audioPath = "";
+		this.fontsPath = "";
 	}
 	
 	/* The method used to load and return a shader resource */
@@ -75,16 +80,29 @@ public class ResourceManager {
 		return AudioLoader.load(this.path + this.audioPath + "/" + path, this.external);
 	}
 	
+	/* The methods used to load and return a font */
+	public Font loadFont(String path, int size) {
+		//Return the font
+		return FontUtils.createBitmapFont(this.path + this.fontsPath + "/" + path, this.external, size);
+	}
+	
+	public Font loadFont(String path, int size, Colour colour) {
+		//Return the font
+		return FontUtils.createBitmapFont(this.path + this.fontsPath + "/" + path, this.external, size, colour);
+	}
+	
 	/* The setters and getters */
 	public void setPath(String path) { this.path = path; }
 	public void setShadersPath(String shadersPath) { this.shadersPath = shadersPath; }
 	public void setTexturesPath(String texturesPath) { this.texturesPath = texturesPath; }
 	public void setAudioPath(String audioPath) { this.audioPath = audioPath; }
+	public void setFontsPath(String fontsPath) { this.fontsPath = fontsPath; }
 	public void setExternal(boolean external) { this.external = external; }
 	public String getPath() { return this.path; }
 	public String getShadersPath() { return this.shadersPath; }
 	public String getTexturesPath() { return this.texturesPath; }
 	public String getAudioPath() { return this.audioPath; }
+	public String getFontsPath() { return this.fontsPath; }
 	public boolean getExternal() { return this.external; }
 	
 	/* The static method used to free all resources */
